hphp/hack/test/typecheck/constraints/multiple_nullable_constraints.php.like_types.exp
File "multiple_nullable_constraints.php", line 13, characters 11-13:
You are trying to access the member foo but this is not an object, it is a value of generic type T (Typing[4062])
File "multiple_nullable_constraints.php", line 12, characters 26-26:
Definition is here
File "multiple_nullable_constraints.php", line 14, characters 11-13:
You are trying to access the member bar but this is not an object, it is a value of generic type T (Typing[4062])
File "multiple_nullable_constraints.php", line 12, characters 26-26:
Definition is here
